Change Metrics/ClassLength and Metrics/ModuleLength
This specifies the CountAsOne attribute for Metrics/ClassLength and
Metrics/ModuleLength to bring them both in line with
Metrics/MethodLength

--- a/config/rubocop/base.yml
+++ b/config/rubocop/base.yml
@@ -10,7 +10,21 @@ AllCops:
 Layout/LeadingCommentSpace:
   AllowRBSInlineAnnotation: true
 
+Metrics/ClassLength:
+  CountAsOne:
+    - array
+    - hash
+    - heredoc
+    - method_call
+
 Metrics/MethodLength:
+  CountAsOne:
+    - array
+    - hash
+    - heredoc
+    - method_call
+
+Metrics/ModuleLength:
   CountAsOne:
     - array
     - hash
@@ -34,4 +48,3 @@ RSpec/NestedGroups:
 Style/Documentation:
   AllowedConstants:
     - Domainic
-
